--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>pi-engine</artifactId>
+        <artifactId>pi-engine-parent</artifactId>
         <groupId>istvan.pipicz.opengl</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -11,5 +11,11 @@
 
     <artifactId>pi-engine-gui</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>istvan.pipicz.opengl</groupId>
+            <artifactId>pi-engine-core</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
