--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,7 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>core</module>
-        <module>gui</module>
-        <module>frame</module>
+        <module>parent</module>
     </modules>
 
     <repositories>
