Extended engine options

--- a/frame/src/test/resources/config/application.properties
+++ b/frame/src/test/resources/config/application.properties
@@ -4,6 +4,9 @@ window.width=800
 window.height=600
 window.full.screen=false
 window.multi.sample.count=4
+window.cursor.hidden=false
+window.major.version=4
+window.minor.version=0
 #time
 time.fps.cap=30
 #resources
@@ -14,9 +17,12 @@ engine.resources.root.fonts=fonts/
 camera.fov=60
 camera.view.port.width=2
 camera.view.port.height=2
+#camera.view.port.width=800
+#camera.view.port.height=600
 camera.near.plane=0.1
 camera.far.plane=100
 camera.look.up.limit=60
 camera.look.down.limit=-60
 camera.look.speed=0.5
+#camera.look.speed=0.075
 camera.move.speed=2
