--- a/core/src/test/resources/config/application.properties
+++ b/core/src/test/resources/config/application.properties
@@ -4,6 +4,9 @@ window.width=800
 window.height=600
 window.full.screen=false
 window.multi.sample.count=4
+window.cursor.hidden=false
+window.major.version=4
+window.minor.version=0
 #time
 time.fps.cap=30
 #resources
