--- a/frame/src/test/resources/config/application.properties
+++ b/frame/src/test/resources/config/application.properties
@@ -4,7 +4,7 @@ window.width=800
 window.height=600
 window.full.screen=false
 window.multi.sample.count=4
-window.cursor.hidden=false
+window.cursor.hidden=true
 window.major.version=4
 window.minor.version=0
 #time
@@ -21,6 +21,5 @@ camera.near.plane=0.1
 camera.far.plane=1000
 camera.look.up.limit=60
 camera.look.down.limit=-60
-camera.look.speed=0.5
-#camera.look.speed=0.075
+camera.look.speed=0.075
 camera.move.speed=2
