Framebuffer objects: Every render needs camera

--- a/frame/src/test/resources/config/application.properties
+++ b/frame/src/test/resources/config/application.properties
@@ -15,8 +15,8 @@ engine.resources.root.textures=textures
 engine.resources.root.fonts=fonts/
 #camera
 camera.fov=60
-camera.view.port.width=800
-camera.view.port.height=600
+camera.viewport.width=800
+camera.viewport.height=600
 camera.near.plane=0.1
 camera.far.plane=1000
 camera.look.up.limit=60
