--- a/core/src/test/resources/config/application.properties
+++ b/core/src/test/resources/config/application.properties
@@ -11,7 +11,7 @@ window.minor.version=0
 time.fps.cap=30
 #resources
 engine.resources.root.meshes=meshes
-engine.resources.root.textures=textures
+engine.resources.root.images=images
 engine.resources.root.fonts=fonts/
 #camera
 camera.fov=60
