--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -24,6 +24,7 @@
         <joml.version>1.8.1</joml.version>
         <puppeteer.version>0.0.3</puppeteer.version>
         <super-csv.version>2.4.0</super-csv.version>
+        <log4j.version>1.2.17</log4j.version>
         <junit.version>4.12</junit.version>
         <mockito.version>1.9.5</mockito.version>
         <hamcrest.version>1.3</hamcrest.version>
@@ -94,6 +95,12 @@
                 <groupId>net.sf.supercsv</groupId>
                 <artifactId>super-csv</artifactId>
                 <version>${super-csv.version}</version>
+            </dependency>
+            <!-- LOG4J -->
+            <dependency>
+                <groupId>log4j</groupId>
+                <artifactId>log4j</artifactId>
+                <version>${log4j.version}</version>
             </dependency>
             <!-- JUNIT -->
             <dependency>
