--- a/frame/src/test/resources/config/application.properties
+++ b/frame/src/test/resources/config/application.properties
@@ -4,7 +4,7 @@ window.width=800
 window.height=600
 window.full.screen=false
 window.multi.sample.count=4
-window.cursor.hidden=true
+window.cursor.hidden=false
 window.major.version=4
 window.minor.version=0
 #time
