--- a/core/src/test/resources/config/application.properties
+++ b/core/src/test/resources/config/application.properties
@@ -21,6 +21,9 @@ camera.near.plane=0.1
 camera.far.plane=100
 camera.look.up.limit=60
 camera.look.down.limit=-60
-camera.look.speed=0.075
-camera.move.speed=2
+camera.look.speed=16
+camera.move.speed=16
 camera.distance=10
+#shadow
+shadow.offset=1
+shadow.distance=30
