--- a/frame/src/test/resources/config/application.properties
+++ b/frame/src/test/resources/config/application.properties
@@ -24,6 +24,9 @@ camera.look.down.limit=-89
 camera.look.speed=0.1
 camera.move.speed=16
 camera.distance=10
+#light
+light.count=4
 #shadow
 shadow.offset=1
 shadow.distance=30
+shadow.pcf.count=1
