Project export refactors

--- a/core/src/test/resources/config/application.properties
+++ b/core/src/test/resources/config/application.properties
@@ -12,7 +12,7 @@ time.fps.cap=30
 #resources
 engine.resources.root.meshes=meshes
 engine.resources.root.images=images
-engine.resources.root.fonts=fonts/
+engine.resources.root.fonts=fonts
 #camera
 camera.fov=60
 camera.viewport.width=800
