Todo elimination: part6
Update refactor

--- a/frame/src/test/resources/config/application.properties
+++ b/frame/src/test/resources/config/application.properties
@@ -4,7 +4,7 @@ window.width=800
 window.height=600
 window.full.screen=false
 window.multi.sample.count=4
-window.cursor.hidden=false
+window.cursor.hidden=true
 window.major.version=4
 window.minor.version=0
 #time
@@ -21,7 +21,7 @@ camera.near.plane=0.1
 camera.far.plane=300
 camera.look.up.limit=89
 camera.look.down.limit=-89
-camera.look.speed=0.1
+camera.look.speed=10
 camera.move.speed=16
 camera.distance=10
 #light
