Todo elimination: part7
Directional vs Point

--- a/frame/src/test/resources/config/application.properties
+++ b/frame/src/test/resources/config/application.properties
@@ -24,11 +24,11 @@ camera.look.down.limit=-89
 camera.look.speed=10
 camera.move.speed=16
 camera.distance=10
-#light
-light.count=4
-#shadow
-shadow.offset=1
-shadow.distance=30
-shadow.pcf.count=1
-#point shadow
-point.shadow.far.plane=30
+#lighting
+lighting.shadow.darkness=0.8
+lighting.directional.light.count=4
+lighting.directional.shadow.distance=30
+lighting.directional.shadow.offset=1
+lighting.directional.shadow.pcf.count=1
+lighting.point.light.count=4
+lighting.point.shadow.distance=30
