Animation data parsing

--- a/frame/src/test/resources/config/application.properties
+++ b/frame/src/test/resources/config/application.properties
@@ -13,6 +13,7 @@ time.fps.cap=60
 engine.resources.root.meshes=meshes
 engine.resources.root.images=images
 engine.resources.root.fonts=fonts
+engine.resources.root.collada=collada
 #camera
 camera.fov=60
 camera.viewport.width=800
