--- a/frame/src/test/resources/config/application.properties
+++ b/frame/src/test/resources/config/application.properties
@@ -33,3 +33,6 @@ lighting.directional.shadow.offset=1
 lighting.directional.shadow.pcf.count=1
 lighting.point.light.count=4
 lighting.point.shadow.distance=30
+#animation
+animation.skeleton.max.weights=3
+animation.skeleton.max.joints=50
