Todo elimination part2
Point shadow smooth disappearance

--- a/core/src/test/resources/config/application.properties
+++ b/core/src/test/resources/config/application.properties
@@ -31,8 +31,10 @@ lighting.directional.light.count=4
 lighting.directional.shadow.distance=30
 lighting.directional.shadow.offset=1
 lighting.directional.shadow.pcf.count=1
+lighting.directional.shadow.transition.distance=5
 lighting.point.light.count=4
 lighting.point.shadow.distance=30
+lighting.point.shadow.transition.distance=5
 #animation
 animation.skeleton.max.weights=3
 animation.skeleton.max.joints=50
