--- a/core/src/test/resources/config/application.properties
+++ b/core/src/test/resources/config/application.properties
@@ -38,3 +38,12 @@ lighting.point.shadow.transition.distance=5
 #animation
 animation.skeleton.max.weights=3
 animation.skeleton.max.joints=50
+#water
+water.wave.speed=0.2
+water.wave.length=4.0
+water.wave.amplitude=0.3
+water.fresnel.effect=0.5
+water.edge.softness=2.0
+water.color.min=0.3
+water.color.max=0.75
+water.murky.depth=25.0
