--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -23,6 +23,7 @@
         <joml.version>1.8.1</joml.version>
         <puppeteer.version>0.0.4</puppeteer.version>
         <super-csv.version>2.4.0</super-csv.version>
+        <jaxb.version>2.3.0</jaxb.version>
         <log4j.version>1.2.17</log4j.version>
         <junit.version>4.12</junit.version>
         <mockito.version>1.9.5</mockito.version>
@@ -89,6 +90,17 @@
                 <groupId>net.sf.supercsv</groupId>
                 <artifactId>super-csv</artifactId>
                 <version>${super-csv.version}</version>
+            </dependency>
+            <!-- JAXB -->
+            <dependency>
+                <groupId>com.sun.xml.bind</groupId>
+                <artifactId>jaxb-impl</artifactId>
+                <version>${jaxb.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.sun.xml.bind</groupId>
+                <artifactId>jaxb-core</artifactId>
+                <version>${jaxb.version}</version>
             </dependency>
             <!-- LOG4J -->
             <dependency>
