Reload on resize

--- a/frame/src/test/resources/config/application.properties
+++ b/frame/src/test/resources/config/application.properties
@@ -3,7 +3,7 @@ window.title=PI engine
 window.width=800
 window.height=600
 window.full.screen=false
-window.multi.sample.count=4
+window.resizable=true
 window.cursor.hidden=true
 window.major.version=4
 window.minor.version=0
