--- a/core/src/main/resources/log4j.properties
+++ b/core/src/main/resources/log4j.properties
@@ -1,23 +1,8 @@
-# Define the root logger with appender APP
-log4j.rootLogger=DEBUG, stdout, APP
+# Root logger option
+log4j.rootLogger=INFO, stdout
 
-# add a ConsoleAppender to the logger stdout to write to the console
+# Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-
-# Pattern to output the caller's file name and line number.
-log4j.appender.stdout.layout.ConversionPattern=%x %5p [%t] - %d{yyyy-MM-dd HH:mm:ss.SSS}; - (%F:%L) - %m%n
-
-# Define the file for APP appender
-log4j.appender.APP=org.apache.log4j.RollingFileAppender
-log4j.appender.APP.File=example.log
-
-#Define Max File Size for APP Appender
-log4j.appender.APP.MaxFileSize=100KB
-
-# Keep one backup file for APP Appender
-log4j.appender.APP.MaxBackupIndex=1
-
-# Define the layout for APP appender
-log4j.appender.APP.layout=org.apache.log4j.PatternLayout
-log4j.appender.APP.layout.ConversionPattern=%x %p %t - %d{yyyy-MM-dd HH:mm:ss.SSS}; - %c - %m%n
+log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
