Window minimum size

--- a/frame/src/test/resources/config/application.properties
+++ b/frame/src/test/resources/config/application.properties
@@ -1,5 +1,7 @@
 #window
 window.title=PI engine
+window.min.width=400
+window.min.height=300
 window.width=800
 window.height=600
 window.full.screen=false
