--- a/frame/src/test/resources/config/application.properties
+++ b/frame/src/test/resources/config/application.properties
@@ -1,3 +1,7 @@
+#display
+display.in.canvas=false
+display.major.version=4
+display.minor.version=0
 #window
 window.title=PI engine
 window.min.width=400
@@ -7,8 +11,6 @@ window.height=600
 window.full.screen=false
 window.resizable=true
 window.cursor.hidden=true
-window.major.version=4
-window.minor.version=0
 #time
 time.fps.cap=60
 #resources
