--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -19,7 +19,7 @@
     </modules>
 
     <properties>
-        <lwjgl.version>3.0.0b</lwjgl.version>
+        <lwjgl.version>3.1.6</lwjgl.version>
         <joml.version>1.8.1</joml.version>
         <puppeteer.version>0.0.5</puppeteer.version>
         <super-csv.version>2.4.0</super-csv.version>
@@ -29,8 +29,44 @@
         <mockito.version>1.9.5</mockito.version>
         <hamcrest.version>1.3</hamcrest.version>
         <piengine.version>1.0-SNAPSHOT</piengine.version>
-        <lwjgl-awt.version>-SNAPSHOT</lwjgl-awt.version>
+        <lwjgl3-awt.version>1.0.0-SNAPSHOT</lwjgl3-awt.version>
     </properties>
+
+    <profiles>
+        <profile>
+            <id>windows</id>
+            <activation>
+                <os>
+                    <family>Windows</family>
+                </os>
+            </activation>
+            <properties>
+                <platform>windows</platform>
+            </properties>
+        </profile>
+        <profile>
+            <id>linux</id>
+            <activation>
+                <os>
+                    <family>Linux</family>
+                </os>
+            </activation>
+            <properties>
+                <platform>linux</platform>
+            </properties>
+        </profile>
+        <profile>
+            <id>mac</id>
+            <activation>
+                <os>
+                    <family>Mac</family>
+                </os>
+            </activation>
+            <properties>
+                <platform>macos</platform>
+            </properties>
+        </profile>
+    </profiles>
 
     <dependencyManagement>
         <dependencies>
@@ -50,35 +86,36 @@
                 <artifactId>pi-engine-frame</artifactId>
                 <version>${piengine.version}</version>
             </dependency>
+            <!-- LWJGL AWT -->
+            <dependency>
+                <groupId>org.lwjgl</groupId>
+                <artifactId>lwjgl3-awt</artifactId>
+                <version>${lwjgl3-awt.version}</version>
+            </dependency>
             <!-- LWJGL -->
             <dependency>
                 <groupId>org.lwjgl</groupId>
-                <artifactId>lwjgl</artifactId>
+                <artifactId>lwjgl-glfw</artifactId>
                 <version>${lwjgl.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.lwjgl</groupId>
-                <artifactId>lwjgl-platform</artifactId>
+                <artifactId>lwjgl-glfw</artifactId>
+                <classifier>natives-${platform}</classifier>
                 <version>${lwjgl.version}</version>
-                <classifier>natives-windows</classifier>
+                <scope>runtime</scope>
             </dependency>
             <dependency>
                 <groupId>org.lwjgl</groupId>
-                <artifactId>lwjgl-platform</artifactId>
+                <artifactId>lwjgl-stb</artifactId>
                 <version>${lwjgl.version}</version>
-                <classifier>natives-osx</classifier>
             </dependency>
             <dependency>
                 <groupId>org.lwjgl</groupId>
-                <artifactId>lwjgl-platform</artifactId>
+                <artifactId>lwjgl-stb</artifactId>
+                <classifier>natives-${platform}</classifier>
                 <version>${lwjgl.version}</version>
-                <classifier>natives-linux</classifier>
-            </dependency>
-            <!-- LWJGL ATW -->
-            <dependency>
-                <groupId>com.github.pipiczistvan</groupId>
-                <artifactId>lwjgl3-awt</artifactId>
-                <version>${lwjgl-awt.version}</version>
+                <scope>runtime</scope>
             </dependency>
             <!-- JOML (MATH LIBRARY) -->
             <dependency>
@@ -138,5 +175,4 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
 </project>
