Awt integration part5
Fixes

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -15,7 +15,7 @@
     <dependencies>
         <!-- LWJGL -->
         <dependency>
-            <groupId>org.lwjgl</groupId>
+            <groupId>com.github.pipiczistvan</groupId>
             <artifactId>lwjgl3-awt</artifactId>
         </dependency>
         <dependency>
