Awt integration part6
jFrame outside of the engine. Resize event. Terminate event. Minimum size.

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -24,7 +24,19 @@
         </dependency>
         <dependency>
             <groupId>org.lwjgl</groupId>
+            <artifactId>lwjgl-glfw</artifactId>
+            <classifier>natives-${platform}</classifier>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.lwjgl</groupId>
             <artifactId>lwjgl-stb</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.lwjgl</groupId>
+            <artifactId>lwjgl-stb</artifactId>
+            <classifier>natives-${platform}</classifier>
+            <scope>runtime</scope>
         </dependency>
         <!-- JOML (MATH LIBRARY) -->
         <dependency>
